<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".SignUp1Fragment"
        android:background="@color/colorbackground">






        <ImageView
            android:id="@+id/image_3"
            android:layout_width="220dp"
            android:layout_height="49dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="42dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="78dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="77dp"
            android:background="@drawable/logo"
            android:backgroundTint="@color/colorbleu" />



        <TextView
            android:id="@+id/hi"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:text="@string/hi"
            android:textAppearance="@style/welcome"
            android:lineSpacingExtra="0sp"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@+id/image_3"
            android:layout_marginTop="34dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="49dp"
            />






        <TextView
            android:id="@+id/weneed"
            android:layout_width="280dp"
            android:layout_height="80dp"
            android:text="@string/weneed"
            android:textAppearance="@style/create_an_a"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@+id/hi"
            android:layout_marginTop="29dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="32dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="57dp"/>




    <EditText
        android:id="@+id/email"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@+id/weneed"
        android:layout_marginTop="29dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="57dp"
        android:background="@drawable/rectangle_c"/>


        <Button
            android:id="@+id/btnnextA"
            android:text="@string/next"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="49px"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:background="@drawable/rectangle"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:layout_marginTop="50dp"
            android:visibility="gone"
            />





    </androidx.constraintlayout.widget.ConstraintLayout>

