<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".YouAreReadyFragment"
        android:background="#4656D5">






        <ImageView
            android:id="@+id/image_3"
            android:layout_width="220dp"
            android:layout_height="49dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="160dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="78dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="77dp"
            android:background="@drawable/logo"
             />






        <TextView
            android:id="@+id/youareready"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/image_3"
            android:layout_marginTop="180dp"
            android:text="@string/youareready"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="70dp"
            app:layout_constraintLeft_toRightOf="parent"
            android:layout_marginRight="25dp"
            android:textAppearance="@style/youareready"
            android:gravity="top"
            />




        <TextView
            android:id="@+id/thnks"
            android:layout_width="290dp"
            android:layout_height="63dp"
            app:layout_constraintTop_toBottomOf="@+id/youareready"
            android:layout_marginTop="5dp"
            android:text="@string/thnks"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="50dp"
            app:layout_constraintLeft_toRightOf="parent"
            android:layout_marginRight="50dp"
            android:textAppearance="@style/thnks"
            android:gravity="top"
            />

        <TextView
            android:id="@+id/textA"
            android:text="@string/sign_up"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:textSize="49px"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/rectangler"
            android:layout_marginBottom="0dp"
            app:layout_constraintTop_toBottomOf="@+id/thnks"
            android:layout_marginTop="150dp"
            />





    </androidx.constraintlayout.widget.ConstraintLayout>

