<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".PasswordFragment"
        android:background="@color/colorbackground">






        <ImageView
            android:id="@+id/image_3"
            android:layout_width="220dp"
            android:layout_height="49dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="42dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="78dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="77dp"
            android:background="@drawable/logo"
            android:backgroundTint="@color/colorbleu" />



        <TextView
            android:id="@+id/great"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:text="@string/great"
            android:textAppearance="@style/welcome"
            android:lineSpacingExtra="0sp"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@+id/image_3"
            android:layout_marginTop="34dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="49dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="188dp"/>


        <TextView
            android:id="@+id/pass"
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:text="@string/pass"
            android:textAppearance="@style/thinkpass"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@+id/great"
            android:layout_marginTop="29dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="32dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="57dp"
            />


    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@+id/pass"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:id="@+id/passw">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="280dp"
            android:id="@+id/texttt"
            android:layout_height="38dp"
            android:hint="@string/passw"
            android:gravity="top"
            android:inputType="textPassword"
            android:background="@drawable/rectangle_c"
            app:layout_constraintTop_toBottomOf="@+id/pass"
            android:layout_marginTop="29dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="32dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="57dp"


            />

    </com.google.android.material.textfield.TextInputLayout>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/mustcont"
        app:layout_constraintTop_toBottomOf="@id/passw"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="57dp"
        android:text="@string/mustcon"
        android:textAppearance="@style/mustcon"/>




    <TextView android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/txtUp"
        app:layout_constraintTop_toBottomOf="@id/mustcont"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="57dp"
        />

    <LinearLayout
        android:id="@+id/linear"
        app:layout_constraintTop_toBottomOf="@id/txtUp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/img1"
            android:layout_marginLeft="10dp"
            android:src="@drawable/rectangle2"
            android:layout_width="48dp"
            android:layout_height="10dp"/>

        <ImageView
            android:id="@+id/img2"
            android:layout_marginLeft="10dp"
            android:src="@drawable/rectangle2"
            android:layout_width="48dp"
            android:layout_height="10dp"/>

        <ImageView
            android:id="@+id/img3"
            android:layout_marginLeft="10dp"
            android:src="@drawable/rectangle2"
            android:layout_width="48dp"
            android:layout_height="10dp"/>

        <ImageView
            android:id="@+id/img4"
            android:layout_marginLeft="10dp"
            android:src="@drawable/rectangle2"
            android:layout_width="48dp"
            android:layout_height="10dp"/>
        <ImageView
            android:id="@+id/img5"
            android:layout_marginLeft="10dp"
            android:src="@drawable/rectangle2"
            android:layout_width="48dp"
            android:layout_height="10dp"/>
    </LinearLayout>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDown"
        app:layout_constraintTop_toBottomOf="@id/linear"
        />





        <Button
            android:id="@+id/btnnextA"
            android:text="NEXT"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="49px"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:background="@drawable/rectangle"
            app:layout_constraintTop_toBottomOf="@+id/txtDown"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            />















    </androidx.constraintlayout.widget.ConstraintLayout>

