<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ConnectVerifiFragment">



    <ImageView
        android:id="@+id/image_3"
        android:layout_width="220dp"
        android:layout_height="49dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="78dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="77dp"
        android:background="@drawable/logo"
        android:backgroundTint="@color/colorbleu" />



    <TextView
        android:id="@+id/phone_verif"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:text="@string/phone_verif"
        android:textAppearance="@style/phone_verif"
        android:lineSpacingExtra="0sp"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@+id/image_3"
        android:layout_marginTop="34dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/we_have_sen"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:text="@string/we_have_sen"
        android:textAppearance="@style/create_an_a"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@+id/phone_verif"
        android:layout_marginTop="29dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="57dp"
        />

    <TextView
        android:id="@+id/txtTel"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:gravity="center_horizontal"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/we_have_sen"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="57dp"
        />




    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtTel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/linear">

        <EditText
            android:id="@+id/edittext1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_edittext"
            android:gravity="center"
            android:inputType="number"
            android:layout_marginLeft="10dp"
            android:textSize="20sp" />

        <EditText
            android:layout_marginLeft="8dp"
            android:textSize="20sp"
            android:background="@drawable/circle_edittext"
            android:id="@+id/edittext2"
            android:inputType="number"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <EditText
            android:textSize="20sp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/circle_edittext"
            android:id="@+id/edittext3"
            android:inputType="number"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"/>


        <EditText
            android:textSize="20sp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/circle_edittext"
            android:id="@+id/edittext4"
            android:inputType="number"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"/>


        <EditText
            android:textSize="20sp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/circle_edittext"
            android:id="@+id/edittext5"
            android:inputType="number"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <EditText
            android:textSize="20sp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/circle_edittext"
            android:id="@+id/edittext6"
            android:inputType="number"
            android:gravity="center"
            android:layout_marginRight="8dp"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
    </LinearLayout>



    <Button
        android:id="@+id/btnVerif"
        android:text="NEXT"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/linear"
        android:layout_marginTop="40dp"
        android:textSize="49px"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:background="@drawable/rectangle"
        android:visibility="gone"/>





    <TextView
        android:id="@+id/didn_t_you"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/didn_t_you"
        android:textAppearance="@style/didn_t_you1"
        app:layout_constraintTop_toBottomOf="@id/linear"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal|top" />




</androidx.constraintlayout.widget.ConstraintLayout>